Criando o componente home

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,23 +1,23 @@
 <mat-drawer-container class="container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side">
     <mat-nav-list class="nav-list">
-      <a mat-list-item routerlink="/">
+      <a mat-list-item routerlink="home">
         <i class="material-icons">home</i>
         home
       </a>
-      <a mat-list-item routerlink="/">
+      <a mat-list-item routerlink="">
         <i class="material-icons">account_circle</i>
         Técnicos
       </a>
-      <a mat-list-item routerlink="/">
+      <a mat-list-item routerlink="">
         <i class="material-icons">person</i>
         Clientes
       </a>
-      <a mat-list-item routerlink="/">
+      <a mat-list-item routerlink="">
         <i class="material-icons">code</i>
         GitHub
       </a>                  
-      <a mat-list-item routerlink="/">
+      <a mat-list-item routerlink="">
         <i class="material-icons">logout</i>
         Logout
       </a>                  
