Criando rota para lista de tecnico

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,11 +1,11 @@
 <mat-drawer-container class="container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side">
     <mat-nav-list class="nav-list">
-      <a mat-list-item routerlink="home">
+      <a mat-list-item routerLink="home">
         <i class="material-icons">home</i>
         home
       </a>
-      <a mat-list-item routerlink="">
+      <a mat-list-item routerLink="tecnicos">
         <i class="material-icons">account_circle</i>
         Técnicos
       </a>
