--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="container">
+  <form class="form mat-elevation-z8">
+    <h1>HelpDesk</h1>
+    <img src="assets/img/login-image.svg">
+    <mat-form-field class="full-width" appearance="fill">
+      <mat-label>E-mail</mat-label>
+      <input matInput placeholder="Ex. teste@mai.com">
+    </mat-form-field>
+    <mat-form-field class="full-width" appearance="fill">
+      <mat-label>Senha</mat-label>
+      <input type="password" matInput placeholder="Ex. 123">
+    </mat-form-field> 
+
+    <button class="full-width mat-elevation-z4" mat-stroked-button color="primary">Primary</button>
+  </form>
+  
+</div>
