--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,14 +4,27 @@
     <img src="assets/img/login-image.svg">
     <mat-form-field class="full-width" appearance="fill">
       <mat-label>E-mail</mat-label>
-      <input matInput placeholder="Ex. teste@mai.com">
+      <input [formControl]='email'
+                    required
+                    [(ngModel)]="creds.email"
+                    name="email" 
+                    matInput 
+                    placeholder="Ex. teste@mai.com">
     </mat-form-field>
     <mat-form-field class="full-width" appearance="fill">
       <mat-label>Senha</mat-label>
-      <input type="password" matInput placeholder="Ex. 123">
+      <input
+        [formControl]='senha'
+        required
+        [(ngModel)]="creds.senha" 
+        name="senha" 
+        type="password" 
+        matInput 
+        placeholder="Ex. 123">
     </mat-form-field> 
 
-    <button class="full-width mat-elevation-z4" mat-stroked-button color="primary">Primary</button>
+    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
+    {{ creds.email }}
   </form>
   
-</div>
+</div> 
