--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -17,7 +17,7 @@
         <i class="material-icons">code</i>
         GitHub
       </a>                  
-      <a mat-list-item routerlink="">
+      <a mat-list-item (click)="logout()">
         <i class="material-icons">logout</i>
         Logout
       </a>                  
