--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -9,7 +9,7 @@
   
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
-  
+    
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
@@ -33,12 +33,12 @@
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let element"> 
-          <a routerLink="">
+          <a routerLink="update/{{ element.id}}">
             <i class="material-icons edit">edit</i>
           </a>  
           <a routerLink="">
             <i class="material-icons delete">delete</i>
-          </a>  
+          </a>    
         </td>
       </ng-container>      
   
@@ -46,10 +46,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   
-    <mat-paginator [pageSizeOptions]="[5, 5, 10, 20]"
-                   showFirstLastButtons 
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+
   </div>
   
   
