--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -41,8 +41,8 @@
       <mat-icon matSuffix>password</mat-icon>
     </mat-form-field>    
 
-    <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-    <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+    <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Atualizar</button>
+    <button routerLink="../../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     
   </form>
