--- a/src/app/components/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/components/cliente/cliente-delete/cliente-delete.component.html
@@ -1,19 +1,19 @@
 <div class="container mat-elevation-z8" >
   <form class="form">
 
-    <h1 class="fullWidth">Deletar Técnico</h1>
+    <h1 class="fullWidth">Deletar Cliente</h1>
     <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="">
 
     <section class="section">
       <mat-checkbox  [disabled]="true" class="margin" color="primary">Admin</mat-checkbox>
       <mat-checkbox [disabled]="true" class="margin" color="primary">Cliente</mat-checkbox>
-      <mat-checkbox [disabled]="true" class="margin" color="primary">Tecnico</mat-checkbox>  
+      <mat-checkbox [disabled]="true" class="margin" color="primary">Cliente</mat-checkbox>  
     </section>
 
     <mat-form-field class="fullWidth" appearance="legacy">
       <mat-label>Nome</mat-label>
       <input 
-      [(ngModel)]="tecnico.nome" 
+      [(ngModel)]="cliente.nome" 
       [disabled]="true"
       name="nome"
       matInput>
@@ -23,7 +23,7 @@
     <mat-form-field class="fullWidth" appearance="legacy">
       <mat-label>CPF</mat-label>
       <input      
-      [(ngModel)]="tecnico.cpf" 
+      [(ngModel)]="cliente.cpf" 
       [disabled]="true"
       name="cpf"
       matInput>
@@ -33,7 +33,7 @@
     <mat-form-field class="fullWidth" appearance="legacy">
       <mat-label>E-mail</mat-label>
       <input       
-      [(ngModel)]="tecnico.email" 
+      [(ngModel)]="cliente.email" 
       [disabled]="true"
       name="email"
       matInput>
@@ -43,7 +43,7 @@
     <mat-form-field class="fullWidth" appearance="legacy">
       <mat-label>Senha</mat-label>
       <input       
-      [(ngModel)]="tecnico.senha" 
+      [(ngModel)]="cliente.senha" 
       [disabled]="true"
       name="senha" type="password"
       matInput>
