--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -1,1 +1,54 @@
-<p>chamado-create works!</p>
+<div class="container mat-elevation-z8">
+  <h1 class="full-width">Criando Chamados</h1>
+  <img class="full-width" src="assets/img/chamado-create.svg" alt="chamado image">
+
+  <form class="form">
+    <mat-form-field class="full-width" appearance="outline">
+      <mat-label>Titulo do chamado</mat-label>
+      <input matInput placeholder="Ex. Trocar notebook">
+    </mat-form-field>
+    <div class="status-prioridade">
+      <mat-form-field appearance="outline">
+        <mat-label>Selecione um Status</mat-label>
+        <mat-select>
+          <mat-option value="0">ABERTO</mat-option>
+          <mat-option value="1">EM ANDAMENTO</mat-option>
+          <mat-option value="1">ENCERRADO</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Selecione uma prioridade</mat-label>
+        <mat-select>
+          <mat-option value="0">BAIXA</mat-option>
+          <mat-option value="1">MEDIA</mat-option>
+          <mat-option value="1">ALTA</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="tecnico">
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Selecione um Tecnico</mat-label>
+        <mat-select>
+          <mat-option value="0">Mauricio</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="Cliente">
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Selecione um Cliente</mat-label>
+        <mat-select>
+          <mat-option value="0">Elisa</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>    
+    <form class="form">
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Descrição</mat-label>
+        <textarea class="descricao" matInput placeholder="Ex. Trocar bateria de notebook..."></textarea>
+      </mat-form-field>
+    </form>
+    <button class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+    <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+    <p class="full-width">Desenvolvido por Mauricio Kaneko</p>
+  </form>
+</div>
