--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -5,12 +5,12 @@
   <form class="form">
     <mat-form-field class="full-width" appearance="outline">
       <mat-label>Titulo do chamado</mat-label>
-      <input matInput placeholder="Ex. Trocar notebook">
+      <input [formControl]="titulo" required matInput placeholder="Ex. Trocar notebook">
     </mat-form-field>
     <div class="status-prioridade">
       <mat-form-field appearance="outline">
         <mat-label>Selecione um Status</mat-label>
-        <mat-select>
+        <mat-select [formControl]="status" required >
           <mat-option value="0">ABERTO</mat-option>
           <mat-option value="1">EM ANDAMENTO</mat-option>
           <mat-option value="1">ENCERRADO</mat-option>
@@ -18,7 +18,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Selecione uma prioridade</mat-label>
-        <mat-select>
+        <mat-select [formControl]="prioridade" required >
           <mat-option value="0">BAIXA</mat-option>
           <mat-option value="1">MEDIA</mat-option>
           <mat-option value="1">ALTA</mat-option>
@@ -27,8 +27,8 @@
     </div>
     <div class="tecnico">
       <mat-form-field class="full-width" appearance="outline">
-        <mat-label>Selecione um Tecnico</mat-label>
-        <mat-select>
+        <mat-label >Selecione um Tecnico</mat-label>
+        <mat-select [formControl]="tecnico" required >
           <mat-option value="0">Mauricio</mat-option>
         </mat-select>
       </mat-form-field>
@@ -36,7 +36,7 @@
     <div class="Cliente">
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Selecione um Cliente</mat-label>
-        <mat-select>
+        <mat-select [formControl]="cliente" required >
           <mat-option value="0">Elisa</mat-option>
         </mat-select>
       </mat-form-field>
@@ -44,10 +44,10 @@
     <form class="form">
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Descrição</mat-label>
-        <textarea class="descricao" matInput placeholder="Ex. Trocar bateria de notebook..."></textarea>
+        <textarea [formControl]="descricao" required  class="descricao" matInput placeholder="Ex. Trocar bateria de notebook..."></textarea>
       </mat-form-field>
     </form>
-    <button class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
     <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     <p class="full-width">Desenvolvido por Mauricio Kaneko</p>
   </form>
