--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -5,12 +5,22 @@
   <form class="form">
     <mat-form-field class="full-width" appearance="outline">
       <mat-label>Titulo do chamado</mat-label>
-      <input [formControl]="titulo" required matInput placeholder="Ex. Trocar notebook">
+      <input
+      [(ngModel)]="chamado.titulo"
+      name="titulo"
+      [formControl]="titulo" 
+      required 
+      matInput 
+      placeholder="Ex. Trocar notebook">
     </mat-form-field>
     <div class="status-prioridade">
       <mat-form-field appearance="outline">
         <mat-label>Selecione um Status</mat-label>
-        <mat-select [formControl]="status" required >
+        <mat-select 
+          [(ngModel)]="chamado.status"
+          name="status"
+          [formControl]="status" 
+          required >
           <mat-option value="0">ABERTO</mat-option>
           <mat-option value="1">EM ANDAMENTO</mat-option>
           <mat-option value="1">ENCERRADO</mat-option>
@@ -18,7 +28,10 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Selecione uma prioridade</mat-label>
-        <mat-select [formControl]="prioridade" required >
+        <mat-select 
+          [(ngModel)]="chamado.prioridade"
+          name="prioridade"
+          [formControl]="prioridade" required >
           <mat-option value="0">BAIXA</mat-option>
           <mat-option value="1">MEDIA</mat-option>
           <mat-option value="1">ALTA</mat-option>
@@ -28,26 +41,41 @@
     <div class="tecnico">
       <mat-form-field class="full-width" appearance="outline">
         <mat-label >Selecione um Tecnico</mat-label>
-        <mat-select [formControl]="tecnico" required >
-          <mat-option value="0">Mauricio</mat-option>
+        <mat-select      
+          [(ngModel)]="chamado.tecnico"
+          name="tecnico"
+          [formControl]="tecnico" 
+          required >
+          <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{tec.nome}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
     <div class="Cliente">
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Selecione um Cliente</mat-label>
-        <mat-select [formControl]="cliente" required >
-          <mat-option value="0">Elisa</mat-option>
+        <mat-select 
+          [(ngModel)]="chamado.cliente"
+          name="cliente"
+          [formControl]="cliente" 
+          required >
+          <mat-option *ngFor="let cli of clientes" value="{{cli.id}}">{{cli.nome}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>    
     <form class="form">
       <mat-form-field class="full-width" appearance="outline">
         <mat-label>Descrição</mat-label>
-        <textarea [formControl]="descricao" required  class="descricao" matInput placeholder="Ex. Trocar bateria de notebook..."></textarea>
+        <textarea 
+        [(ngModel)]="chamado.descricao"
+        name="descricao"
+        [formControl]="descricao" 
+        required  
+        class="descricao"
+        matInput 
+        placeholder="Ex. Trocar bateria de notebook..."></textarea>
       </mat-form-field>
     </form>
-    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+    <button (click)='create()' [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
     <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     <p class="full-width">Desenvolvido por Mauricio Kaneko</p>
   </form>
